@@ -8,7 +8,6 @@ cleanup.*			author - Markus Armbruster, Colin Watson
 debug.c				author - Colin Watson
 decompress.*			author - Colin Watson
 flock.*				from GNU libc
-gettext.h			from GNU gettext
 hashtable.*			author - Wilf., Colin Watson
 linelength.*			author - Martin Schulze, Jon Tombs, Colin Watson
 pathsearch.*			author - Colin Watson
