@@ -1,3 +1,9 @@
+Mon Jan  7 03:21:49 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* lib/gettext.h: Remove; now provided by Gnulib.
+	* lib/Makefile.am (libman_a_SOURCES): Remove gettext.h.
+	* lib/README: Remove gettext.h.
+
 Mon Jan  7 03:11:08 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* include/comp_src.h.in: Update header comment.
